gsuiDotline: CSS, fix, overflow (the dots' event catcher)

--- a/gsuiDotline/gsuiDotline.css
+++ b/gsuiDotline/gsuiDotline.css
@@ -2,6 +2,7 @@ gsui-dotline {
 	--gsuiDotline-dotSize: 4px;
 	--gsuiDotline-cdotSize: 8px;
 	display: block;
+	overflow: hidden;
 	width: 100%;
 	height: 100%;
 	position: relative;
